# agentic-talkdoc-platform

./: .env.example  LICENSE  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/: __init__.py
agents/care_coordination/: __init__.py  appointment_reminders_agent.py  care_plan_management_agent.py  clinical_documentation_agent.py  lab_results_processing_agent.py  patient_intake_agent.py  referral_management_agent.py  smart_scheduling_agent.py
agents/patient_engagement/: __init__.py  ai_health_advisor_agent.py  prescription_management_agent.py  triage_agent.py
agents/revenue_cycle/: __init__.py  claims_generation_agent.py  claims_status_tracking_agent.py  denial_management_agent.py  insurance_verification_agent.py  medical_coding_agent.py  payment_posting_agent.py
docs/: AGENTS.md  ARCHITECTURE.md  AUTHENTICATION.md  AUTH_IMPLEMENTATION_SUMMARY.md  BUILD_SUMMARY.md  GETTING_STARTED.md
platform_core/: Dockerfile  __init__.py  config.py
platform_core/agent_execution/: __init__.py  api_router.py
platform_core/agent_orchestration/: __init__.py  audit.py  base_agent.py
platform_core/api_gateway/: __init__.py  main.py
platform_core/auth/: __init__.py  api_router.py  db_service.py  dependencies.py  models.py  security.py
platform_core/shared_services/: __init__.py  tenant_context.py  tenant_middleware.py
platform_core/tenant_management/: __init__.py  api_router.py  db_service.py  models.py  provisioning.py  schema.py
